force-app/main/default/objects/CA_IPTU__c/CA_IPTU__c.object-meta.xml
<CustomObject>
    <label>IPTU</label>
    <nameField>
        <label>IPTU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPTUs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>