force-app/main/default/objects/CA_IPTU__c/fields/CA_AnoCompetenciaIPTU__c.field-meta.xml
<CustomField>
    <fullName>CA_AnoCompetenciaIPTU__c</fullName>
    <label>Ano de Competência IPTU</label>
    <length>4</length>
    <type>Text</type>
</CustomField>