force-app/main/default/objects/CA_IPTU__c/fields/CA_ParcelamentoIPTU__c.field-meta.xml
<CustomField>
    <fullName>CA_ParcelamentoIPTU__c</fullName>
    <label>Parcelamento IPTU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>