force-app/main/default/objects/CA_IPTU__c/fields/CA_ValorIPTU__c.field-meta.xml
<CustomField>
    <fullName>CA_ValorIPTU__c</fullName>
    <label>Valor do IPTU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>