force-app/main/default/objects/CA_IPTU__c/fields/CA_ValorParcela__c.field-meta.xml
<CustomField>
    <fullName>CA_ValorParcela__c</fullName>
    <label>Valor da Parcela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>