force-app/main/default/objects/CA_IPTU__c/listViews/CA_TodosIPTUs.listView-meta.xml
<ListView>
    <fullName>CA_TodosIPTUs</fullName>
    <columns>NAME</columns>
    <columns>CA_AnoCompetenciaIPTU__c</columns>
    <columns>CA_ValorIPTU__c</columns>
    <columns>CA_ParcelamentoIPTU__c</columns>
    <columns>CA_ValorParcela__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos IPTUs</label>
</ListView>